apps/n8n/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n-server
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    volsync.backube/privileged-movers: "true"
