apps/n8n/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: n8n-server
    app.kubernetes.io/name: n8n-serverjs
  name: n8n-server
  namespace: n8n-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: n8n-server
      app.kubernetes.io/name: n8n-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: n8n-server
        app.kubernetes.io/name: n8n-server
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DB_SQLITE_VACUUM_ON_STARTUP
          value: "true"
        - name: EXECUTIONS_DATA_PRUNE
          value: "true"
        - name: EXECUTIONS_DATA_MAX_AGE
          value: "7"
        - name: EXECUTIONS_DATA_PRUNE_MAX_COUNT
          value: "50000"
        - name: GENERIC_TIMEZONE
          value: "America/Denver"
        - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
          value: "false"
        - name: N8N_PROTOCOL
          value: "https"
        - name: N8N_PORT
          value: "8080"
        - name: N8N_HOST
          value: "n8n-server.invertedorigin.com"
        - name: N8N_LOG_LEVEL
          value: "info"
        - name: N8N_LOG_OUTPUT
          value: "console"
        - name: N8N_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              name: n8n-secret
              key: N8N_ENCRYPTION_KEY
        image: ghcr.io/n8n-io/n8n:latest
        name: main
        resources:
          requests:
            cpu: 25m
            memory: 250Mi
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: true
      hostPID: false
      serviceAccountName: default
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: n8n-server-pvc-replicated
