apps/n8n/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: n8n-server
    app.kubernetes.io/name: n8n-server
    app.kubernetes.io/service: n8n-server
  name: n8n-server
  namespace: n8n-server
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: n8n-server
    app.kubernetes.io/name: n8n-server
  type: ClusterIP
